--- a/homework-template/src/frontend/index.css
+++ b/homework-template/src/frontend/index.css
@@ -2,3 +2,169 @@
 * {
   font-family: 'Montserrat', sans-serif;
 }
+
+html {
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+position: relative;
+min-height: 100%;
+}
+
+body {
+  min-height: 100%;
+  width: 100%;  
+  background-color: #f5ebeb !important;
+
+
+}
+.upper-bar{
+  background-color: #54af91;
+  padding:1em;
+  color:#2a5f4d;
+  text-align: center;
+  font-weight: bolder;
+}
+.navbar-nav .nav-link {
+  color:#54af91!important ;
+}
+.navbar-nav .nav-link:hover {
+  color:#2a5f4d !important ;
+}
+
+/* content */
+.content{
+  height: 100%;
+  overflow:auto;
+  /* background-color: #f5ebeb; */
+}
+h2{
+  font-family: cursive;
+  text-align: center;
+  color: #d02f2f;
+  padding:1.2em;
+}
+.card{
+  margin-bottom: 40px;
+  height: 95%;
+}
+.card-img-top{
+  height: 50%;
+}
+.card-title{
+  font-family: cursive;
+  text-align: center;
+  color: #d02f2f;
+}
+.card-text{
+  font-family: cursive;
+  /* color :#37373e; */
+  color:#2a5f4d;
+}
+.card-btn{
+  color: wheat !important;
+    background-color: #54af91 !important;
+    border-color: #2b5f4d !important;
+}
+
+
+/* Home content */
+
+/*Home Message  */
+.message{
+  -webkit-background-size :cover;
+  -moz-background-size :cover;
+  -o-background-size :cover;
+  background-size :cover;
+  height: 70vh;
+  background-image: url(./pictures/mixfood.jpg);
+  background-repeat: no-repeat;
+  position: relative;
+}
+.message-overlay{
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  z-index: 2;
+  background-color: rgba(0,0,0,0.6);
+  left: 25%;
+  top: 20%;
+  color:wheat;
+}
+.message-header{
+  padding: 5%;
+  font-size: 1.8rem;
+}
+.message-text{
+  margin-top: 0;
+  font-size: 20px;
+  margin-bottom: 1rem;
+}
+/* Home meal sharing experience */
+.meal-sharing-experience{
+  margin:5%;
+}
+.experience-header{
+  margin-bottom: 3em;
+  color:#d02f2f;
+}
+.experience-text{
+  padding: 1em;
+  font-family: cursive;
+  /* color :#37373e; */
+  color:#2a5f4d;
+}
+/* Home Show all meals */
+.home-all-meals-btn{
+  margin:1.5em;
+  padding: 1em;
+  border: solid 0px;
+  background-color: #54af91;
+  color:#d02f2f;
+  font-size: 17px;
+  border-radius: 15px;
+}
+.home-all-meals-btn a{
+  color:#d02f2f;
+  font-size: 17px;
+}
+
+/* All meals content */
+
+
+
+/* Footer  */
+.footer{
+  background-color: #f8f9fa;
+  /* position: absolute; */
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+}
+.copy-right{
+  font-size:0.7em;
+  color:#54af91;
+  padding-top: 20px;
+}
+.contact-list{
+  list-style: none;
+  margin: 0;
+  padding-top: 10px;
+}
+.contact-list li{
+  display: inline-block;
+}
+.contact-list li a{
+color :#54af91;
+margin-left: 20px;
+font-size: 1.5em;
+}
+.contact-list li a :hover{
+  color :#2a5f4d;
+  }
+
+.mix-food{
+max-width: 100%;
+max-height: 100%;
+}
