--- a/homework-template/src/frontend/index.css
+++ b/homework-template/src/frontend/index.css
@@ -44,28 +44,7 @@ h2{
   color: #d02f2f;
   padding:1.2em;
 }
-.card{
-  margin-bottom: 40px;
-  height: 95%;
-}
-.card-img-top{
-  height: 50%;
-}
-.card-title{
-  font-family: cursive;
-  text-align: center;
-  color: #d02f2f;
-}
-.card-text{
-  font-family: cursive;
-  /* color :#37373e; */
-  color:#2a5f4d;
-}
-.card-btn{
-  color: wheat !important;
-    background-color: #54af91 !important;
-    border-color: #2b5f4d !important;
-}
+
 
 
 /* Home content */
@@ -130,7 +109,41 @@ h2{
 }
 
 /* All meals content */
+.meals-card{
+  margin-bottom: 40px;
+  height: 92%;
+}
+.meals-card-img-top{
+  height: 50%;
+}
+.meals-card-title{
+  font-family: cursive;
+  text-align: center;
+  color: #d02f2f;
+}
+.meals-card-text{
+  font-family: cursive;
+  /* color :#37373e; */
+  color:#2a5f4d;
+}
+.meals-card-btn{
+  color: wheat !important;
+  background-color: #54af91 !important;
+  border-color: #2b5f4d !important;
+}
 
+/* Meal with id content */
+.meal-card-img{
+  width:100%;
+  height:100%;
+}
+.meal-card-btn{
+  width:13em;
+  margin:1em;
+  color: wheat !important;
+  background-color: #54af91 !important;
+  border-color: #2b5f4d !important;
+}
 
 
 /* Footer  */
