--- a/homework-template/src/frontend/index.css
+++ b/homework-template/src/frontend/index.css
@@ -268,17 +268,16 @@ font-size: 1.5em;
 .about-title{
   font-size: 16px;
   text-shadow: 1px 1px grey;
-
 }
 }
 
 
 @media (max-width: 576px) { 
   h1{
-    font-size: 25px;
+    font-size: 25px !important;
   }
   h2{
-    font-size: 20px;
+    font-size: 20px !important;
   }
   .message-header {
     font-size: 19px;
