--- a/homework-template/src/frontend/index.css
+++ b/homework-template/src/frontend/index.css
@@ -255,6 +255,9 @@ font-size: 1.5em;
 
 @media (max-width: 992px) { 
 /* About Us */
+.message-header {
+  margin-top: 30px;
+}
 .about{
   flex-direction: column-reverse;
 }
@@ -280,10 +283,14 @@ font-size: 1.5em;
     font-size: 20px !important;
   }
   .message-header {
-    font-size: 19px;
+    font-size: 20px;
+    margin-top:50px;
   }
   .message-text {
     font-size: 15px; 
+  }
+  .footer{
+    height: 90px;
   }
   }
   
